fix: fix text alignment when wrapping occurs (#331)

--- a/src/nyttarskalas/nyttarskalas.module.css
+++ b/src/nyttarskalas/nyttarskalas.module.css
@@ -49,6 +49,9 @@ p {
 
 .newyearParty__invitation__table {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .newyearParty__invitation__table a {
@@ -61,6 +64,8 @@ p {
   justify-content: center;
   font-size: 2rem;
   margin: 0;
+  text-align: center;
+  line-height: 1;
 }
 
 .newyearParty__invitation__button {
